tests/ui/frontmatter/fence-indented.stderr
error: invalid preceding whitespace for frontmatter opening
  --> $DIR/fence-indented.rs:1:1
   |
LL |   ---
   | ^^^^^
   |
note: frontmatter opening should not be preceded by whitespace
  --> $DIR/fence-indented.rs:1:1
   |
LL |   ---
   | ^^

error: invalid preceding whitespace for frontmatter close
  --> $DIR/fence-indented.rs:3:1
   |
LL |   ---
   | ^^^^^
   |
note: frontmatter close should not be preceded by whitespace
  --> $DIR/fence-indented.rs:3:1
   |
LL |   ---
   | ^^

error: aborting due to 2 previous errors

